tests/baselines/reference/moduleResolutionWithExtensions_notSupported(strict=true).errors.txt
/a.ts(1,17): error TS6142: Module './tsx' was resolved to '/tsx.tsx', but '--jsx' is not set.
/a.ts(2,17): error TS6142: Module './jsx' was resolved to '/jsx.jsx', but '--jsx' is not set.
/a.ts(3,16): error TS7016: Could not find a declaration file for module './js'. '/js.js' implicitly has an 'any' type.


==== /a.ts (3 errors) ====
    import tsx from "./tsx"; // Not allowed.
                    ~~~~~~~
!!! error TS6142: Module './tsx' was resolved to '/tsx.tsx', but '--jsx' is not set.
    import jsx from "./jsx"; // Not allowed.
                    ~~~~~~~
!!! error TS6142: Module './jsx' was resolved to '/jsx.jsx', but '--jsx' is not set.
    import js from "./js"; // OK because it's an untyped module.
                   ~~~~~~
!!! error TS7016: Could not find a declaration file for module './js'. '/js.js' implicitly has an 'any' type.
    
==== /tsx.tsx (0 errors) ====
    
==== /jsx.jsx (0 errors) ====
    
==== /js.js (0 errors) ====
    